--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.17",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
